feat: add content cv

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body class="body">
+<body>
     <header>
         <div class="container">
             <nav class="nav-header">
@@ -21,12 +21,138 @@
             </nav>
         </div>
     </header>
+    <main>
+        <div class="main-info">
+            <h1>NATALLIA BELIATSKAYA</h1>
+            <img class="foto" src="lenivets.jpg" alt="avatar">
+            <section class="contacts" id="contact">
+                <h2>Contacts</h2>
+                <ul>
+                    <li class="contact-item">Phone number: +375296817933</li>
+                    <li class="contact-item">E-mail: tashenka0308@gmail.com</li>
+                    <li class="contact-item">GitHub: Tashenka0308</li>
+                </ul>
+            </section>
+            <section class="skill" id="skills">
+                    <h2>Skills</h2>
+                    <ul>
+                        <li class="skill-item">HTML:
+                            <div class="grade">
+                                <svg class="icon green">
+                                    <use xlink:href="sprite.svg#green"></use>
+                                </svg>
+                                <svg class="icon green">
+                                    <use xlink:href="sprite.svg#green"></use>
+                                </svg>
+                                <svg class="icon green">
+                                    <use xlink:href="sprite.svg#green"></use>
+                                </svg>
+                                <svg class="icon">
+                                    <use xlink:href="sprite.svg#green"></use>
+                                </svg>
+                                <svg class="icon">
+                                    <use xlink:href="sprite.svg#green"></use>
+                                </svg>
+                             </div>
+                        </li>
+                        <li class="skill-item">CSS:
+                            <div class="grade">
+                                <svg class="icon green">
+                                    <use xlink:href="sprite.svg#green"></use>
+                                </svg>
+                                <svg class="icon green">
+                                    <use xlink:href="sprite.svg#green"></use>
+                                </svg>
+                                <svg class="icon green">
+                                    <use xlink:href="sprite.svg#green"></use>
+                                </svg>
+                                <svg class="icon">
+                                    <use xlink:href="sprite.svg#green"></use>
+                                </svg>
+                                <svg class="icon">
+                                    <use xlink:href="sprite.svg#green"></use>
+                                </svg>
+                             </div>
+                        </li>
+                        <li class="skill-item">Javascript:
+                            <div class="grade">
+                                <svg class="icon green">
+                                    <use xlink:href="sprite.svg#green"></use>
+                                </svg>
+                                <svg class="icon">
+                                    <use xlink:href="sprite.svg#green"></use>
+                                </svg>
+                                <svg class="icon">
+                                    <use xlink:href="sprite.svg#green"></use>
+                                </svg>
+                                <svg class="icon">
+                                    <use xlink:href="sprite.svg#green"></use>
+                                </svg>
+                                <svg class="icon">
+                                    <use xlink:href="sprite.svg#green"></use>
+                                </svg>
+                             </div>
+                        </li>
+                        <li class="skill-item">Git:
+                            <div class="grade">
+                                <svg class="icon green">
+                                    <use xlink:href="sprite.svg#green"></use>
+                                </svg>
+                                <svg class="icon">
+                                    <use xlink:href="sprite.svg#green"></use>
+                                </svg>
+                                <svg class="icon">
+                                    <use xlink:href="sprite.svg#green"></use>
+                                </svg>
+                                <svg class="icon">
+                                    <use xlink:href="sprite.svg#green"></use>
+                                </svg>
+                                <svg class="icon">
+                                    <use xlink:href="sprite.svg#green"></use>
+                                </svg>
+                         </div>
+                        </li>
+                    </ul>
+            </section>
+            <section id="skill">
+                    <h3>Language skills</h3>
+                <ul>
+                    <li class="skill-item">Russian - Proficiency</li>
+                    <li class="skill-item">Belorussian - Advanced</li>
+                    <li class="skill-item">English - Pre-Intermediate</li>
+                </ul>
+            </section>
+        </div>
+    <div class="second">
+        <section class="section_about_me" id="about_me">
+                <h2>About me</h2>
+                <p>I live in Minsk. <br> Education - BA (Hons) in Business Economics.<br>Currently my objective is to study the course «JavaScript/Front-end».<br>  Currently my priority is study.
+                </p>
+        </section>
+        <section class="section_code" id="code">
+                <h2>Code</h2>
+              <p> Description: <br> Make a simple function called greet that returns the most-famous "hello world!".</p>
+              <p class="code">
+               const greet = () =&gt; {<br>
+               return 'hello world!';<br>
+               };<br>
+               greet ();<br>
+              </p>
+        </section>
+        <section id="project">
+                <h2>Project</h2>
+                <p> My project</p>
+            <a class="link_project" href="https://tashenka0308.github.io/rsschool-cv/cv">Markdown &amp; Git</a>
+        </section>
+    </div>
+    </main>
     <footer>
         <div class="container">
             <div class="footer-container">
-                <a class="footer-link" href="https://github.com/Tashenka0308">Created by Natallia Beliatskaya, 2023</a>
+                <a class="footer-link" href="https://github.com/Tashenka0308">Created by Natallia Beliatskaya, 2023<br>
+                GitHub Tashenka0308</a>
                 <svg class="footer-icon">
-                    <use xlink:href="/rsschool-cv/sprite.svg#rs_school"></use>
+                    <use xlink:href="sprite.svg#rs_school_js"></use>
                 </svg>
                 <a class="footer-link" href="https://rs.school/js-stage0/">Course «JavaScript/Front-end»</a>
             </div>
