fix: change logo RSSCHOOL

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>My CV</title>
 </head>
 <body>
     <header>
@@ -151,9 +151,7 @@
             <div class="footer-container">
                 <a class="footer-link" href="https://github.com/Tashenka0308">Created by Natallia Beliatskaya, 2023<br>
                 GitHub Tashenka0308</a>
-                <svg class="footer-icon">
-                    <use xlink:href="sprite.svg#rs_school_js"></use>
-                </svg>
+                <img class="footer-icon" src="rs_school_js.svg" alt="logo">
                 <a class="footer-link" href="https://rs.school/js-stage0/">Course «JavaScript/Front-end»</a>
             </div>
         </div>
