fix: changed the link

--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
     <footer>
         <div class="container">
             <div class="footer-container">
-                <a class="footer-link" href="https://github.com/Tashenka0308">Created by Natallia Beliatskaya, 2023<br>
+                <a class="footer-link" href="https://github.com/Tashenka0308">Created by Natallia Beliatskaya, 2024<br>
                 GitHub Tashenka0308</a>
                 <img class="footer-icon" src="rs_school_js.svg" alt="logo">
-                <a class="footer-link" href="https://rs.school/js-stage0/">Course «JavaScript/Front-end»</a>
+                <a class="footer-link" href=" https://rs.school/courses/javascript-preschool-ru">Course «JavaScript/Front-end»</a>
             </div>
         </div>
     </footer>
