fix: changed the link (logo)

--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
             <div class="footer-container">
                 <a class="footer-link" href="https://github.com/Tashenka0308">Created by Natallia Beliatskaya, 2024<br>
                 GitHub Tashenka0308</a>
-                <img class="footer-icon" src="rs_school_js.svg" alt="logo">
+                <a class="footer-link" href=" https://rs.school/courses/javascript-preschool-ru">
+                    <img class="footer-icon" src="rs_school_js.svg" alt="logo"></a>
                 <a class="footer-link" href=" https://rs.school/courses/javascript-preschool-ru">Course «JavaScript/Front-end»</a>
             </div>
         </div>
